[package]
name = "nbody_rust"
version = "0.1.0"
authors = ["Colin McCulloch <colin.mcculloch@woodmac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level=3
debug=false
codegen-units=1
lto=false
panic = 'unwind'
incremental = false
overflow-checks = false
rpath=false